--- a/说明.md
+++ b/说明.md
@@ -53,10 +53,14 @@ sh make.sh example.sh
 
 ### 修改记录
 
+- 2025-05-18 tag 1.1
+ 
+  增加字符串加密
+
+- 2025-02-05 tag 1.0
+ 
+  修复内存溢出
+
 - 2024-12-06
  
   初始版本
-  
-- 2025-02-05
- 
-  修复内存溢出
