--- a/说明.md
+++ b/说明.md
@@ -47,7 +47,9 @@ sh make.sh example.sh
 
 ```xbash_android_v7a``` 安卓版
 
-```xbash_linux_x86_64``` LINUX 64位版本
+```xbash_linux_x86_64``` LINUX x86_64位版本
+
+```xbash_linux_arm_64``` LINUX arm_64位版本
 
 ```xbash_macOS_11.7.9_x86_64``` MacOS 64位版本
 
