--- a/说明.md
+++ b/说明.md
@@ -53,7 +53,13 @@ sh make.sh example.sh
 
 ```xbash_macOS_11.7.9_x86_64``` MacOS 64位版本
 
+```xbash_aix_7.1.3``` Aix 64位版本
+
 ### 修改记录
+
+- 2025-05-18 tag 1.2
+ 
+  修复0字节xmalloc bug
 
 - 2025-05-18 tag 1.1
  
